# QueueCTL_Backend_Developer_Internship_Assignment

./: README.md  pyproject.toml  queuectl.db  requirements.txt
src/queuectl/: __init__.py  __main__.py  cli.py  config.py  db.py  storage.py  utils.py  worker.py  worker_process.py
src/queuectl.egg-info/: PKG-INFO  SOURCES.txt
tests/: demo.py
