[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "0.1.0"
description = "CLI-based background job queue system with persistent storage and workers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mehwish Qureshi"}
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
queuectl = "queuectl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

